--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /.terraform/modules/modules.json
 /.terraform/providers/registry.terraform.io/hashicorp/aws/5.44.0/windows_amd64/terraform-provider-aws_v5.44.0_x5.exe
 /.terraform/providers/registry.terraform.io/hashicorp/vault/4.2.0/windows_amd64/terraform-provider-vault_v4.2.0_x5.exe
+/terraform.tfstate
+/terraform.tfstate.backup
