--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /.terraform/providers/registry.terraform.io/hashicorp/vault/4.2.0/windows_amd64/terraform-provider-vault_v4.2.0_x5.exe
 /terraform.tfstate
 /terraform.tfstate.backup
+/.terraform/providers/registry.terraform.io/hashicorp/aws/5.45.0/windows_amd64/terraform-provider-aws_v5.45.0_x5.exe
