--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /terraform.tfstate
 /terraform.tfstate.backup
 /.terraform/providers/registry.terraform.io/hashicorp/aws/5.45.0/windows_amd64/terraform-provider-aws_v5.45.0_x5.exe
+/.terraform.tfstate.lock.info
